soal6/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soal1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soal1
  template:
    metadata:
      labels:
        app: soal1
    spec:
      containers:
      - name: soal1
        image: febriyanadji/spe-test-soal1:latest
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: soal2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soal2
  template:
    metadata:
      labels:
        app: soal2
    spec:
      containers:
      - name: soal2
        image: febriyanadji/spe-test-soal2:latest
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: soal3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soal3
  template:
    metadata:
      labels:
        app: soal3
    spec:
      containers:
      - name: soal3
        image: febriyanadji/spe-test-soal3:latest
        ports:
        - containerPort: 80
