soal6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soal1
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: soal1

---

apiVersion: v1
kind: Service
metadata:
  name: soal2
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: soal2

---

apiVersion: v1
kind: Service
metadata:
  name: soal3
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: soal3
