soal6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soal1
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: soal1.spetest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: soal1
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soal2
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: soal2.spetest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: soal2
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soal3
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: soal3.spetest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: soal3
            port:
              number: 80
